# postmarker

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .relint.yml  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  commit.yml  release.yml
docs/: Makefile  bounces.rst  changelog.rst  conf.py  django.rst  domains.rst  emails.rst  index.rst  messages.rst  reference.rst  sender_signatures.rst  server.rst  spamcheck.rst  stats.rst  status.rst  supression.rst  templates.rst  testing.rst  tornado.rst  triggers.rst  usage.rst  webhooks.rst
postmarker/: __init__.py  _compat.py  _compat_tests.py  core.py  django.py  exceptions.py  logging.py  pytest.py  tornado.py  utils.py  webhooks.py
postmarker/django/: __init__.py  backend.py  signals.py
postmarker/models/: base.py  bounces.py  domains.py  emails.py  messages.py  senders.py  server.py  stats.py  status.py  templates.py  triggers.py
src/postmarker/: core.py  exceptions.py  logging.py  pytest.py
test/: _compat.py  conftest.py  helpers.py  test_core.py  test_exceptions.py  test_pytest.py  test_spamcheck.py  test_utils.py
test/cassettes/: bounces.json  default.json  emails.json  exceptions.json  messages.json  senders.json  server.json  spamcheck.json  stats.json  status.json  templates.json  triggers.json
test/django/: conftest.py  settings.py  test_backend.py  test_mixins.py
tests/: _compat.py  conftest.py  helpers.py  test_core.py  test_exceptions.py  test_pytest.py  test_spamcheck.py  test_utils.py  test_webhooks.py
(+58 files in other folders)
